--- a/slides/6_regressao/slides_regressao.qmd
+++ b/slides/6_regressao/slides_regressao.qmd
@@ -157,10 +157,10 @@ p_neg + p_pos + p_ran + bad_reg +
 
 ## Definições e nomenclaturas
 
-* $x_1, x_2, \ldots, x_p$: variáveis explicativas (variáveis independentes ou
+* $x_1, x_2, \cdots, x_p$: variáveis explicativas (variáveis independentes ou
 *features* ou preditores)
 
-* $X = x_1, x_2, \ldots, x_p$: conjunto de todos os preditores
+* $X = x_1, x_2, \cdots, x_p$: conjunto de todos os preditores
 
 * $Y$: variável resposta (ou variável dependente ou *target*)
 
@@ -301,6 +301,14 @@ $cabeça = \beta_0 + \beta_1total$
 </center>
 
 <br>
+
+```{r lm-cabeca-comprimento-total}
+#| eval: false
+# No R
+lm(comprimento_cabeca ~ comprimento_total,
+   data = gambas)
+```
+
 :::
 
 ::: {.column width="50%"}
@@ -393,3 +401,173 @@ $comprimento \,da \,cabeça = 42.7 + 0.57 \times comprimento \,total$
 <center>
 Como a melhor reta é escolhida?
 </center>
+
+## "Melhor reta" baseado em que?
+
+A gente quer a reta que *erre menos*.
+
+. . .
+
+Exemplo de medida de erro: **E**rro **Q**uadrático **M**édio.
+
+<center>
+$$
+EQM = \sqrt{\frac{1}{N}\sum(y_i - \hat{y_i})^2}
+$$
+
+```{r comparar erro-reta-na-mao-e-melhor}
+#| echo: false
+#| fign-align: "center"
+#| out.width: "70%"
+melhor_reta <- lm(comprimento_cabeca ~ comprimento_total, data = gambas)
+
+gambas_com_preds <- melhor_reta |> 
+  broom::augment() |> 
+  rename(pred_melhor_reta = .fitted) |> 
+  mutate(
+    pred_reta_a_mao = 36 + 0.7 * comprimento_total
+  )
+
+grafico_residuos_melhor_reta <- gambas_com_preds |> 
+  ggplot(aes(x = comprimento_total, y = comprimento_cabeca)) +
+  geom_point(size = 2) +
+  geom_abline(
+    intercept = melhor_reta$coefficients[1], 
+    slope = melhor_reta$coefficients[2], 
+    size = 1,
+    colour = "salmon"
+  ) +
+  geom_segment(aes(xend = comprimento_total, yend = pred_melhor_reta), colour = "purple", size = 0.8) +
+  labs(
+    subtitle = "Resíduos da Melhor Reta",
+    y = "Comprimento da cabeça (em mm)",
+    x = "Comprimento total (em cm)"
+  ) +
+  theme_minimal(15, "Charter")
+
+grafico_residuos_reta_a_mao <- gambas_com_preds |> 
+  ggplot(aes(x = comprimento_total, y = comprimento_cabeca)) +
+  geom_point(size = 2) +
+  geom_abline(
+    intercept = 36, 
+    slope = 0.7, 
+    size = 1,
+    colour = "orange"
+  ) +
+  geom_segment(aes(xend = comprimento_total, yend = pred_reta_a_mao), colour = "purple", size = 0.8) +
+  labs(
+    subtitle = "Resíduos da Reta Escolhida a Mão",
+    y = "Comprimento da cabeça (em mm)",
+    x = "Comprimento total (em cm)"
+  ) +
+  theme_minimal(15, "Charter")
+
+grafico_residuos_melhor_reta + grafico_residuos_reta_a_mao +
+  plot_annotation(title = "Os segmentos roxos são os resíduos (ou o quanto o modelo errou naqueles pontos).",
+                  theme = theme_minimal(15, "Charter"))
+```
+
+## E se quisermos usar mais preditores?
+
+::: columns
+::: {.column width="50%"}
+#### Regressão linear múltipla
+
+<center>
+$y = \beta_0 + \beta_1x_1 + \cdots + \beta_px_p$
+</center>
+
+<br>
+
+#### Exemplo
+
+<center>
+$cabeça = \beta_0 + \beta_1total + \beta_2cauda$
+</center>
+
+<br>
+
+```{r linear-multipla-no-r-gambas}
+#| eval: false
+# No R
+lm(comprimento_cabeca ~ comprimento_total + comprimento_cauda,
+   data = gambas)
+```
+
+:::
+
+::: {.column width="50%"}
+```{r multipla-plotly}
+#| echo: false
+#| fig-align: "center"
+#| out.width: "100%"
+library(plotly)
+
+x <- gambas$comprimento_total
+y <- gambas$comprimento_cauda
+z <- gambas$comprimento_cabeca
+
+fit <- lm(z ~ x + y)
+
+grid.lines <- 26
+
+x.pred <- seq(min(x), max(x), length.out = grid.lines)
+y.pred <- seq(min(y), max(y), length.out = grid.lines)
+
+xy <- expand.grid(x = x.pred, y = y.pred)
+
+z.pred <- matrix(predict(fit, newdata = xy), 
+                 nrow = grid.lines, ncol = grid.lines)
+
+fig <- plot_ly(data = gambas) |>
+  add_trace(
+    x = ~ comprimento_total,
+    y = ~ comprimento_cauda,
+    z = ~ comprimento_cabeca,
+    type = "scatter3d",
+    mode = "markers",
+    opacity = .8
+  ) |>
+  add_trace(
+    z = z.pred,
+    x = x.pred,
+    y = y.pred,
+    type = "surface",
+    opacity = .9
+  ) |>
+  layout(scene = list(xaxis = list(title = "Total (cm)"),
+                      yaxis = list(title = "Cauda (cm)"),
+                      zaxis = list(title = "Cabeça (mm)"))) |> 
+  hide_legend() |> 
+  hide_colorbar()
+
+fig
+```
+:::
+:::
+
+## O que o R nos diz?
+
+```{r modelo-cabeca-pelo-total-e-cauda}
+modelo_linear_multiplo <-
+  lm(comprimento_cabeca ~ comprimento_total + comprimento_cauda,
+     data = gambas)
+
+summary(modelo_linear_multiplo)
+```
+
+. . .
+
+<center>
+$$
+cabeça = 46.8 + 0.64total - 0.28cauda
+$$
+</center>
+
+## Preditores categóricos
+
+### Preditores com apenas duas categorias
+
+Pergunta de pesquisa: O tamanho das nadadeiras dos pinguins são diferentes
+entre os sexos?
+
