--- a/slides/4_descritiva/slides_descritiva.qmd
+++ b/slides/4_descritiva/slides_descritiva.qmd
@@ -324,6 +324,8 @@ distribuição
 ```{r histograma-distribuicao-assimetrica}
 #| fig-align: "center"
 #| out.width: "65%"
+set.seed(1)
+
 tibble(x = rchisq(1000, 10)) |> 
   ggplot() +
   aes(x = x) +
@@ -350,6 +352,8 @@ Curtose é a medida da forma da distribuição em relação à sua média.
 #| fig-align: "center"
 #| out.width: "100%"
 #| echo: false
+set.seed(1)
+
 alta_curtose <- tibble(valores = rnorm(1000, mean = 0, sd = 1) * 5,
                        curtose = "Alta")
 
